--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "javascript数据结构",
   "main": "index.js",
   "scripts": {
+    "test": "jest",
     "commit": "git-cz"
   },
   "repository": {
@@ -22,6 +23,7 @@
     }
   },
   "devDependencies": {
-    "cz-conventional-changelog": "^3.1.0"
+    "cz-conventional-changelog": "^3.1.0",
+    "jest": "^26.0.1"
   }
 }
